--- a/index.html
+++ b/index.html
@@ -8,5 +8,50 @@
   </head>
   <body>
 
+    <!-- Header Section  -->
+
+    <header>
+      <div class="logo">
+        <img src="./resourses/images/ic-logo.svg" alt="Colmar Logo">
+      </div>
+
+      <div class="brandName">
+        <span>Colmar</span>
+        <span>Academy</span>
+      </div>
+
+      <nav>
+        <ul>
+          <li>On Camupus</li>
+          <li>Online</li>
+          <li>Sign in</li>
+        </ul>
+      </nav>
+
+    </header>
+
+    <!-- Banner  -->
+
+    <div class="bannerContainer">
+
+      <div class="bannerContent">
+        <div class="bannerImage">
+         <img src="./resourses/images/banner.jpg" alt="Colmar Students">
+       </div>
+
+       <div class="bannerText">
+         <h1>Learn Something new everyday</h1>
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+       </div>
+
+       <div class="starHere">
+         <span>Star here</span>
+
+       </div>
+
+      </div>
+
+    </div>
+
   </body>
 </html>
