Added banner section with CSS and transitions

--- a/index.html
+++ b/index.html
@@ -37,19 +37,12 @@
       <div class="bannerContent">
         <div class="bannerImage">
          <img src="./resourses/images/banner.jpg" alt="Colmar Students">
+         <div class="bannertext">
+           <h1>Learn Something new everyday</h1>
+           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+           <span class="startHere">Start here</span>
+         </div>
        </div>
-
-       <div class="bannerText">
-         <h1>Learn Something new everyday</h1>
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
-       </div>
-
-       <div class="starHere">
-         <span>Star here</span>
-
-       </div>
-
-      </div>
 
     </div>
 
