--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
     <!-- Banner  -->
 
-    <div class="bannerContainer">
+    <div class="containerOne">
 
       <div class="bannerContent">
-        <div class="bannerImage">
+        <div class="bannerContiner">
          <img src="./resourses/images/banner.jpg" alt="Colmar Students">
          <div class="bannertext">
            <h1>Learn Something new everyday</h1>
@@ -45,6 +45,123 @@
        </div>
 
     </div>
+
+    <!-- First Content Section  -->
+
+    <div class="containerOnewhite">
+
+      <div class="firstContent">
+        <div class="fisrtContainer">
+            <img src="./resourses/images/information-main.jpg" alt="Colmar Man">
+            <h2>It dosen't hurt to keep practicing</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+            <p>Emanuel, Sr Stratigist at Hiring.com</p>
+        </div>
+
+        <!-- Side Content  -->
+
+       <div class="firstSidecontiner">
+
+          <div class="firstSide">
+            <img src="./resourses/images/information-orientation.jpg" alt="Orientation date">
+            <div class="firstSide_text">
+              <h3>Orientation date</h3>
+              <p>Tue 10/11 & Erd 10/12: 8am-3pm</p>
+              <span class="readMore">Read more</span>
+            </div>
+          </div>
+
+          <div class="firstSide">
+            <img src="./resourses/images/information-campus.jpg" alt="Colmar Campus">
+            <div class="firstSide_text">
+              <h3>Our Campus</h3>
+              <p>Find which campus is close by you</p>
+              <span class="readMore">Read more</span>
+            </div>
+          </div>
+
+          <div class="firstSide">
+            <img src="./resourses/images/information-guest-lecture.jpg" alt="Guess lecture">
+            <div class="firstSide_text">
+              <h3>Our guest lecture</h3>
+              <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+              <span class="readMore">Read more</span>
+            </div>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
+    <!-- Second Content Section  -->
+
+    <div class="containerOne">
+
+      <div class="smallContainer">
+
+        <div class="secondContent">
+
+          <div class="course">
+            <img src="./resourses/images/course-software.jpg" alt="Software Course">
+            <div class="course_text">
+              <h4>Software engineering</h4>
+              <p>Course</p>
+              <p>Web Development, Mobile Development, iOT, API's</p>
+            </div>
+          </div>
+
+          <div class="course">
+            <img src="./resourses/images/course-data.jpg" alt="Data Course">
+            <div class="course_text">
+              <h4>Data</h4>
+              <p>Course</p>
+              <p>Data Science, Big Data, SQL, Data Visualization</p>
+            </div>
+          </div>
+
+          <div class="course">
+            <img src="./resourses/images/course-computer-art.jpg" alt="Computer Art Course">
+            <div class="course_text">
+              <h4>Computer art</h4>
+              <p>Course</p>
+              <p>Imaging & Design, Web Design, Motion Graphics & Visual Efects, Computer Animation</p>
+            </div>
+          </div>
+
+          <div class="course">
+            <img src="./resourses/images/course-business.jpg" alt="Computer Art Course">
+            <div class="course_text">
+              <h4>Business</h4>
+              <p>Course</p>
+              <p>Product Development, Business Developmen, Startup</p>
+            </div>
+          </div>
+
+          <div class="course">
+            <img src="./resourses/images/course-design.jpg" alt="Design Course">
+            <div class="course_text">
+              <h4>Design</h4>
+              <p>Course</p>
+              <p>User Experience Design, User Research, Visual Design</p>
+            </div>
+          </div>
+
+          <div class="course">
+            <img src="./resourses/images/course-marketing.jpg" alt="Design Course">
+            <div class="course_text">
+              <h4>Marketing</h4>
+              <p>Course</p>
+              <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+
 
   </body>
 </html>
