Added Second Content and CSS and Transitions

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <div class="containerOne">
 
       <div class="smallContainer">
+        <h3 class="lheader">Learning</h3>
 
         <div class="secondContent">
 
@@ -110,6 +111,7 @@
             </div>
           </div>
 
+
           <div class="course">
             <img src="./resourses/images/course-data.jpg" alt="Data Course">
             <div class="course_text">
@@ -118,6 +120,7 @@
               <p>Data Science, Big Data, SQL, Data Visualization</p>
             </div>
           </div>
+
 
           <div class="course">
             <img src="./resourses/images/course-computer-art.jpg" alt="Computer Art Course">
