--- a/resourses/images/Colmar Academy.htm
+++ b/resourses/images/Colmar Academy.htm
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
+<!-- saved from url=(0075)file:///Users/clementgeorges/Documents/DevProject/Colmar_Academy/index.html -->
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    
     <title>Colmar Academy</title>
-    <link rel="stylesheet" href="./resourses/css/reset.css" type="text/css">
-    <link rel="stylesheet" href="./resourses/css/style.css" type="text/css">
-    <link rel="icon" href="./resourses/images/head.ico" type=“image/x-icon">
+    <link rel="stylesheet" href="./Colmar Academy_files/reset.css" type="text/css">
+    <link rel="stylesheet" href="./Colmar Academy_files/style.css" type="text/css">
+    <link rel="icon" href="file:///Users/clementgeorges/Documents/DevProject/Colmar_Academy/resourses/images/head.ico" type="“image/x-icon&quot;">
   </head>
   <body>
 
@@ -13,7 +13,7 @@
 
     <header>
       <div class="logo">
-        <img src="./resourses/images/ic-logo.svg" alt="Colmar Logo">
+        <img src="./Colmar Academy_files/ic-logo.svg" alt="Colmar Logo">
       </div>
 
       <div class="brandName">
@@ -37,7 +37,7 @@
 
       <div class="bannerContent">
         <div class="bannerContiner">
-         <img src="./resourses/images/banner.jpg" alt="Colmar Students">
+         <img src="./Colmar Academy_files/banner.jpg" alt="Colmar Students">
          <div class="bannertext">
            <h1>Learn Something new everyday</h1>
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
@@ -53,7 +53,7 @@
 
       <div class="firstContent">
         <div class="fisrtContainer">
-            <img src="./resourses/images/information-main.jpg" alt="Colmar Man">
+            <img src="./Colmar Academy_files/information-main.jpg" alt="Colmar Man">
             <h2>It dosen't hurt to keep practicing</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
             <p>Emanuel, Sr Stratigist at Hiring.com</p>
@@ -64,16 +64,16 @@
        <div class="firstSidecontiner">
 
           <div class="firstSide">
-            <img src="./resourses/images/information-orientation.jpg" alt="Orientation date">
+            <img src="./Colmar Academy_files/information-orientation.jpg" alt="Orientation date">
             <div class="firstSide_text">
               <h3>Orientation date</h3>
-              <p>Tue 10/11 & Erd 10/12: 8am-3pm</p>
+              <p>Tue 10/11 &amp; Erd 10/12: 8am-3pm</p>
               <span class="readMore">Read more</span>
             </div>
           </div>
 
           <div class="firstSide">
-            <img src="./resourses/images/information-campus.jpg" alt="Colmar Campus">
+            <img src="./Colmar Academy_files/information-campus.jpg" alt="Colmar Campus">
             <div class="firstSide_text">
               <h3>Our Campus</h3>
               <p>Find which campus is close by you</p>
@@ -82,7 +82,7 @@
           </div>
 
           <div class="firstSide">
-            <img src="./resourses/images/information-guest-lecture.jpg" alt="Guess lecture">
+            <img src="./Colmar Academy_files/information-guest-lecture.jpg" alt="Guess lecture">
             <div class="firstSide_text">
               <h3>Our guest lecture</h3>
               <p>Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -104,7 +104,7 @@
         <div class="secondContent">
 
           <div class="course">
-            <img src="./resourses/images/course-software.jpg" alt="Software Course">
+            <img src="./Colmar Academy_files/course-software.jpg" alt="Software Course">
             <div class="course_text">
               <h4>Software engineering</h4>
               <p>Course</p>
@@ -114,7 +114,7 @@
 
 
           <div class="course">
-            <img src="./resourses/images/course-data.jpg" alt="Data Course">
+            <img src="./Colmar Academy_files/course-data.jpg" alt="Data Course">
             <div class="course_text">
               <h4>Data</h4>
               <p>Course</p>
@@ -124,16 +124,16 @@
 
 
           <div class="course">
-            <img src="./resourses/images/course-computer-art.jpg" alt="Computer Art Course">
+            <img src="./Colmar Academy_files/course-computer-art.jpg" alt="Computer Art Course">
             <div class="course_text">
               <h4>Computer art</h4>
               <p>Course</p>
-              <p>Imaging & Design, Web Design, Motion Graphics & Visual Efects, Computer Animation</p>
+              <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Efects, Computer Animation</p>
             </div>
           </div>
 
           <div class="course">
-            <img src="./resourses/images/course-business.jpg" alt="Computer Art Course">
+            <img src="./Colmar Academy_files/course-business.jpg" alt="Computer Art Course">
             <div class="course_text">
               <h4>Business</h4>
               <p>Course</p>
@@ -142,7 +142,7 @@
           </div>
 
           <div class="course">
-            <img src="./resourses/images/course-design.jpg" alt="Design Course">
+            <img src="./Colmar Academy_files/course-design.jpg" alt="Design Course">
             <div class="course_text">
               <h4>Design</h4>
               <p>Course</p>
@@ -151,20 +151,22 @@
           </div>
 
           <div class="course">
-            <img src="./resourses/images/course-marketing.jpg" alt="Design Course">
+            <img src="./Colmar Academy_files/course-marketing.jpg" alt="Design Course">
             <div class="course_text">
               <h4>Marketing</h4>
               <p>Course</p>
               <p>Analytics, Content Marketing, Mobile Marketing</p>
             </div>
           </div>
+
         </div>
+
       </div>
+
     </div>
 
-    
 
 
+  
 
-  </body>
-</html>
+</div></body></html>
