Added the Third Section with Footer outline

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Colmar Academy</title>
     <link rel="stylesheet" href="./resourses/css/reset.css" type="text/css">
     <link rel="stylesheet" href="./resourses/css/style.css" type="text/css">
-    <link rel="icon" href="./resourses/images/head.ico" type=“image/x-icon">
+
   </head>
   <body>
 
@@ -162,7 +162,64 @@
       </div>
     </div>
 
-    
+    <!-- Third Content Section -->
+
+    <div class="containerOnewhite">
+
+      <div class="theaderContainer">
+        <span class="lheader">Thesis Exhibit</span>
+      <div
+
+      <div class="firstContent">
+
+        <div class="fisrtContainer">
+          <video src="./resourses/videos/thesis.mp4" autoplay controls></video>
+          <h2>Reimagine urban</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        </div>
+
+        <!-- Third Side Content  -->
+
+        <div class="thirdSidecontiner">
+
+          <div class="firstSide">
+            <img src="./resourses/images/thesis-fisma.jpg" alt="Orientation date">
+            <div class="firstSide_text">
+              <h3>Fisma: Design and prototype</h3>
+              <p>Designer showcase of new prototype product</p>
+            </div>
+          </div>
+
+          <div class="firstSide">
+            <img src="./resourses/images/thesis-now-and-then.jpg" alt="Orientation date">
+            <div class="firstSide_text">
+              <h3>Now and then</h3>
+              <p>Research study about New York</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Footer Section  -->
+
+    <footer>
+      <div class="copyrightContainer">
+        <p>© Colmar Academy. All rights reserved</p>
+      </div>
+      <div class="terms">
+        <ul>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">Privacy</a></li>
+        </ul>
+
+      </div>
+
+
+
+    </footer>
+
+
 
 
 
