--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
       <nav>
         <ul>
-          <li>On Camupus</li>
-          <li>Online</li>
-          <li>Sign in</li>
+          <li><a href="#">On Camupus</a></li>
+          <li><a href="#">Online</a></li>
+          <li><a href="#">Sign in</a></li>
         </ul>
       </nav>
 
@@ -41,7 +41,7 @@
          <div class="bannertext">
            <h1>Learn Something new everyday</h1>
            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
-           <span class="startHere">Start here</span>
+           <span class="startHere"><a href="#">Start here</a></span>
          </div>
        </div>
 
@@ -68,7 +68,7 @@
             <div class="firstSide_text">
               <h3>Orientation date</h3>
               <p>Tue 10/11 & Erd 10/12: 8am-3pm</p>
-              <span class="readMore">Read more</span>
+              <span class="readMore"><a href="#">Read more</a></span>
             </div>
           </div>
 
@@ -77,7 +77,7 @@
             <div class="firstSide_text">
               <h3>Our Campus</h3>
               <p>Find which campus is close by you</p>
-              <span class="readMore">Read more</span>
+              <span class="readMore"><a href="#">Read more</a></span>
             </div>
           </div>
 
@@ -86,7 +86,7 @@
             <div class="firstSide_text">
               <h3>Our guest lecture</h3>
               <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-              <span class="readMore">Read more</span>
+              <span class="readMore"><a href="#">Read more</a></span>
             </div>
           </div>
 
@@ -173,7 +173,7 @@
       <div class="firstContent">
 
         <div class="fisrtContainer">
-          <video src="./resourses/videos/thesis.mp4" autoplay controls></video>
+          <video src="./resourses/videos/thesis.mp4" controls></video>
           <h2>Reimagine urban</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
