--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Colmar Academy</title>
+    <head>
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.css">
+</head>
     <link rel="stylesheet" href="./resourses/css/reset.css" type="text/css">
     <link rel="stylesheet" href="./resourses/css/style.css" type="text/css">
 
@@ -27,6 +30,14 @@
           <li><a href="#">Online</a></li>
           <li><a href="#">Sign in</a></li>
         </ul>
+
+        <!-- Mobile Nav  -->
+        <div class="mobileNav">
+          <i class="fa fa-graduation-cap"></i>
+          <i class="fa fa-desktop"></i>
+          <i class="fa fa-user"></i>
+        </div>
+
       </nav>
 
     </header>
@@ -65,6 +76,7 @@
 
           <div class="firstSide">
             <img src="./resourses/images/information-orientation.jpg" alt="Orientation date">
+            <img class="firstSidemobile" src="./resourses/images/information-orientation-mobile.jpg" alt="Orientation date">
             <div class="firstSide_text">
               <h3>Orientation date</h3>
               <p>Tue 10/11 & Erd 10/12: 8am-3pm</p>
@@ -74,6 +86,7 @@
 
           <div class="firstSide">
             <img src="./resourses/images/information-campus.jpg" alt="Colmar Campus">
+            <img class="firstSidemobile" src="./resourses/images/information-campus-mobile.jpg" alt="Colmar Campus">
             <div class="firstSide_text">
               <h3>Our Campus</h3>
               <p>Find which campus is close by you</p>
@@ -83,6 +96,7 @@
 
           <div class="firstSide">
             <img src="./resourses/images/information-guest-lecture.jpg" alt="Guess lecture">
+            <img class="firstSidemobile" src="./resourses/images/information-guest-lecture-mobile.jpg" alt="Guess lecture">
             <div class="firstSide_text">
               <h3>Our guest lecture</h3>
               <p>Join a keynote with Oliver Sack about music in medical treatment</p>
@@ -100,6 +114,7 @@
 
       <div class="smallContainer">
         <h3 class="lheader">Learning</h3>
+        <h3 class="mheader">Start learning</h3>
 
         <div class="secondContent">
 
@@ -158,6 +173,22 @@
               <p>Analytics, Content Marketing, Mobile Marketing</p>
             </div>
           </div>
+
+          <!-- Second Content Mobile  -->
+
+          <div class="mobileCourse">
+            <span>Software engineering</span>
+            <span>Computer art</span>
+            <span>Design</span>
+            <span>Data</span>
+            <span>Business</span>
+            <span>Marketing</span>
+
+
+          </div>
+
+
+
         </div>
       </div>
     </div>
