Site 99 persent complete just need to refine

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
         <!-- Mobile Nav  -->
         <div class="mobileNav">
-          <i class="fa fa-graduation-cap"></i>
-          <i class="fa fa-desktop"></i>
-          <i class="fa fa-user"></i>
+          <a href="#"><i class="fa fa-graduation-cap fa-2x"></i></a>
+          <a href="#"><i class="fa fa-desktop fa-2x"></i></a>
+          <a href="#"><i class="fa fa-user fa-2x"></i></a>
         </div>
 
       </nav>
@@ -76,7 +76,7 @@
 
           <div class="firstSide">
             <img src="./resourses/images/information-orientation.jpg" alt="Orientation date">
-            <img class="firstSidemobile" src="./resourses/images/information-orientation-mobile.jpg" alt="Orientation date">
+            <img class="firstSidemobile"src="./resourses/images/information-orientation-mobile.jpg" alt="Orientation date">
             <div class="firstSide_text">
               <h3>Orientation date</h3>
               <p>Tue 10/11 & Erd 10/12: 8am-3pm</p>
@@ -129,17 +129,7 @@
 
 
           <div class="course">
-            <img src="./resourses/images/course-data.jpg" alt="Data Course">
-            <div class="course_text">
-              <h4>Data</h4>
-              <p>Course</p>
-              <p>Data Science, Big Data, SQL, Data Visualization</p>
-            </div>
-          </div>
-
-
-          <div class="course">
-            <img src="./resourses/images/course-computer-art.jpg" alt="Computer Art Course">
+            <img src="./resourses/images/course-computer-art.jpg" alt="Computer Art">
             <div class="course_text">
               <h4>Computer art</h4>
               <p>Course</p>
@@ -147,21 +137,31 @@
             </div>
           </div>
 
-          <div class="course">
-            <img src="./resourses/images/course-business.jpg" alt="Computer Art Course">
-            <div class="course_text">
-              <h4>Business</h4>
-              <p>Course</p>
-              <p>Product Development, Business Developmen, Startup</p>
-            </div>
-          </div>
 
           <div class="course">
-            <img src="./resourses/images/course-design.jpg" alt="Design Course">
+            <img src="./resourses/images/course-design.jpg" alt="Design">
             <div class="course_text">
               <h4>Design</h4>
               <p>Course</p>
               <p>User Experience Design, User Research, Visual Design</p>
+            </div>
+          </div>
+
+          <div class="course">
+            <img src="./resourses/images/course-data.jpg" alt="Data">
+            <div class="course_text">
+              <h4>Data</h4>
+              <p>Course</p>
+              <p>Data science, Big Data, SQL, Data Visualization</p>
+            </div>
+          </div>
+
+          <div class="course">
+            <img src="./resourses/images/course-business.jpg" alt="Business">
+            <div class="course_text">
+              <h4>Business</h4>
+              <p>Course</p>
+              <p>Product Development, Business Development, Startup</p>
             </div>
           </div>
 
@@ -199,6 +199,7 @@
 
       <div class="theaderContainer">
         <span class="lheader">Thesis Exhibit</span>
+        <h3 class="mheader">Thesis exhibit</h3>
       <div
 
       <div class="firstContent">
