Added better resonsiveness to site

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <img class="firstSidemobile"src="./resourses/images/information-orientation-mobile.jpg" alt="Orientation date">
             <div class="firstSide_text">
               <h3>Orientation date</h3>
-              <p>Tue 10/11 & Erd 10/12: 8am-3pm</p>
+              <p>Tue 10/11 & End 10/12: 8am-3pm</p>
               <span class="readMore"><a href="#">Read more</a></span>
             </div>
           </div>
