Added some cleaner code to css and tidied up some margins and flex

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
         <!-- Mobile Nav  -->
         <div class="mobileNav">
+          <img class="navLogo"src="./resourses/images/ic-logo.svg" alt="">
           <a href="#"><i class="fa fa-graduation-cap fa-2x"></i></a>
           <a href="#"><i class="fa fa-desktop fa-2x"></i></a>
           <a href="#"><i class="fa fa-user fa-2x"></i></a>
