--- a/index.html
+++ b/index.html
@@ -16,27 +16,27 @@
 
     <header>
       <div class="logo">
-        <img src="./resourses/images/ic-logo.svg" alt="Colmar Logo">
+        <img src="./resourses/images/ic-logo.svg" alt="Colmar Academy Logo">
       </div>
 
-      <div class="brandName">
+      <div class="brandName" aria-label="Institute Name">
         <span>Colmar</span>
         <span>Academy</span>
       </div>
 
       <nav>
-        <ul>
+        <ul role="presentation">
           <li><a href="#">On Camupus</a></li>
           <li><a href="#">Online</a></li>
           <li><a href="#">Sign in</a></li>
         </ul>
 
         <!-- Mobile Nav  -->
-        <div class="mobileNav">
-          <img class="navLogo"src="./resourses/images/ic-logo.svg" alt="">
-          <a href="#"><i class="fa fa-graduation-cap fa-2x"></i></a>
-          <a href="#"><i class="fa fa-desktop fa-2x"></i></a>
-          <a href="#"><i class="fa fa-user fa-2x"></i></a>
+        <div class="mobileNav" role="navigation">
+          <img class="navLogo"src="./resourses/images/ic-logo.svg" alt="Colmar Academy Logo">
+          <a href="#"><i class="fa fa-graduation-cap fa-2x" aria-label="Campus"></i></a>
+          <a href="#"><i class="fa fa-desktop fa-2x" aria-label="Online"></i></a>
+          <a href="#"><i class="fa fa-user fa-2x" aria-label="Sign in"></i></a>
         </div>
 
       </nav>
@@ -47,213 +47,219 @@
 
     <div class="containerOne">
 
-      <div class="bannerContent">
+      <div class="bannerContent" role="banner">
+
         <div class="bannerContiner">
-         <img src="./resourses/images/banner.jpg" alt="Colmar Students">
-         <div class="bannertext">
-           <h1>Learn Something new everyday</h1>
-           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
-           <span class="startHere"><a href="#">Start here</a></span>
-         </div>
-       </div>
+          <img src="./resourses/images/banner.jpg" alt="Colmar Students">
+           <div class="bannertext">
+             <h1>Learn Something new everyday</h1>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,</p>
+             <span class="startHere" role="button"><a href="#">Start here</a></span>
+           </div>
+        </div>
+
+      </div>
 
     </div>
 
-    <!-- First Content Section  -->
+    <main>
 
-    <div class="containerOnewhite">
+      <!-- First Content Section  -->
 
-      <div class="firstContent">
-        <div class="fisrtContainer">
-            <img src="./resourses/images/information-main.jpg" alt="Colmar Man">
-            <h2>It dosen't hurt to keep practicing</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-            <p>Emanuel, Sr Stratigist at Hiring.com</p>
-        </div>
+      <div class="containerOnewhite">
 
-        <!-- Side Content  -->
-
-       <div class="firstSidecontiner">
-
-          <div class="firstSide">
-            <img src="./resourses/images/information-orientation.jpg" alt="Orientation date">
-            <img class="firstSidemobile"src="./resourses/images/information-orientation-mobile.jpg" alt="Orientation date">
-            <div class="firstSide_text">
-              <h3>Orientation date</h3>
-              <p>Tue 10/11 & End 10/12: 8am-3pm</p>
-              <span class="readMore"><a href="#">Read more</a></span>
-            </div>
+        <div class="firstContent">
+          <div class="fisrtContainer">
+              <img src="./resourses/images/information-main.jpg" alt="Colmar Academy Student Reading">
+              <h2 role="heading">It dosen't hurt to keep practicing</h2>
+              <p role="contentinfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              <p aria-label="Author">Emanuel, Sr Stratigist at Hiring.com</p>
           </div>
 
-          <div class="firstSide">
-            <img src="./resourses/images/information-campus.jpg" alt="Colmar Campus">
-            <img class="firstSidemobile" src="./resourses/images/information-campus-mobile.jpg" alt="Colmar Campus">
-            <div class="firstSide_text">
-              <h3>Our Campus</h3>
-              <p>Find which campus is close by you</p>
-              <span class="readMore"><a href="#">Read more</a></span>
-            </div>
-          </div>
+          <!-- Side Content  -->
 
-          <div class="firstSide">
-            <img src="./resourses/images/information-guest-lecture.jpg" alt="Guess lecture">
-            <img class="firstSidemobile" src="./resourses/images/information-guest-lecture-mobile.jpg" alt="Guess lecture">
-            <div class="firstSide_text">
-              <h3>Our guest lecture</h3>
-              <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-              <span class="readMore"><a href="#">Read more</a></span>
+          <aside>
+
+            <div class="firstSidecontiner">
+
+              <div class="firstSide">
+                <img src="./resourses/images/information-orientation.jpg" alt="Orientation date">
+                <img class="firstSidemobile"src="./resourses/images/information-orientation-mobile.jpg" alt="Orientation date">
+                <div class="firstSide_text">
+                  <h3>Orientation date</h3>
+                  <p>Tue 10/11 & End 10/12: 8am-3pm</p>
+                  <span class="readMore"><a href="#">Read more</a></span>
+                </div>
+              </div>
+
+              <div class="firstSide">
+                <img src="./resourses/images/information-campus.jpg" alt="Colmar Campus">
+                <img class="firstSidemobile" src="./resourses/images/information-campus-mobile.jpg" alt="Colmar Campus">
+                <div class="firstSide_text">
+                  <h3>Our Campus</h3>
+                  <p>Find which campus is close by you</p>
+                  <span class="readMore"><a href="#">Read more</a></span>
+                </div>
+              </div>
+
+              <div class="firstSide">
+                <img src="./resourses/images/information-guest-lecture.jpg" alt="Guess lecture">
+                <img class="firstSidemobile" src="./resourses/images/information-guest-lecture-mobile.jpg" alt="Guess lecture">
+                <div class="firstSide_text">
+                  <h3>Our guest lecture</h3>
+                  <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                  <span class="readMore"><a href="#">Read more</a></span>
+                </div>
+              </div>
+
             </div>
-          </div>
+          </aside>
 
         </div>
       </div>
-    </div>
 
-    <!-- Second Content Section  -->
+      <!-- Second Content Section  -->
 
-    <div class="containerOne">
+      <div class="containerOne">
 
-      <div class="smallContainer">
-        <h3 class="lheader">Learning</h3>
-        <h3 class="mheader">Start learning</h3>
+        <div class="smallContainer">
+          <h3 class="lheader" role="heading">Start learning</h3>
+          <h3 class="mheader" role="heading">Start learning</h3>
 
-        <div class="secondContent">
+          <div class="secondContent">
 
-          <div class="course">
-            <img src="./resourses/images/course-software.jpg" alt="Software Course">
-            <div class="course_text">
-              <h4>Software engineering</h4>
-              <p>Course</p>
-              <p>Web Development, Mobile Development, iOT, API's</p>
+            <div class="course">
+              <img src="./resourses/images/course-software.jpg" alt="Software Course">
+              <div class="course_text">
+                <h4 role="heading">Software engineering</h4>
+                <p>Course</p>
+                <p>Web Development, Mobile Development, iOT, API's</p>
+              </div>
             </div>
-          </div>
 
 
-          <div class="course">
-            <img src="./resourses/images/course-computer-art.jpg" alt="Computer Art">
-            <div class="course_text">
-              <h4>Computer art</h4>
-              <p>Course</p>
-              <p>Imaging & Design, Web Design, Motion Graphics & Visual Efects, Computer Animation</p>
+            <div class="course">
+              <img src="./resourses/images/course-computer-art.jpg" alt="Computer Art">
+              <div class="course_text">
+                <h4 role="heading">Computer art</h4>
+                <p>Course</p>
+                <p>Imaging & Design, Web Design, Motion Graphics & Visual Efects, Computer Animation</p>
+              </div>
             </div>
-          </div>
 
 
-          <div class="course">
-            <img src="./resourses/images/course-design.jpg" alt="Design">
-            <div class="course_text">
-              <h4>Design</h4>
-              <p>Course</p>
-              <p>User Experience Design, User Research, Visual Design</p>
+            <div class="course">
+              <img src="./resourses/images/course-design.jpg" alt="Design">
+              <div class="course_text">
+                <h4 role="heading">Design</h4>
+                <p>Course</p>
+                <p>User Experience Design, User Research, Visual Design</p>
+              </div>
             </div>
-          </div>
 
-          <div class="course">
-            <img src="./resourses/images/course-data.jpg" alt="Data">
-            <div class="course_text">
-              <h4>Data</h4>
-              <p>Course</p>
-              <p>Data science, Big Data, SQL, Data Visualization</p>
+            <div class="course">
+              <img src="./resourses/images/course-data.jpg" alt="Data">
+              <div class="course_text">
+                <h4 role="heading">Data</h4>
+                <p>Course</p>
+                <p>Data science, Big Data, SQL, Data Visualization</p>
+              </div>
             </div>
-          </div>
 
-          <div class="course">
-            <img src="./resourses/images/course-business.jpg" alt="Business">
-            <div class="course_text">
-              <h4>Business</h4>
-              <p>Course</p>
-              <p>Product Development, Business Development, Startup</p>
+            <div class="course">
+              <img src="./resourses/images/course-business.jpg" alt="Business">
+              <div class="course_text">
+                <h4 role="he">Business</h4>
+                <p>Course</p>
+                <p>Product Development, Business Development, Startup</p>
+              </div>
             </div>
-          </div>
 
-          <div class="course">
-            <img src="./resourses/images/course-marketing.jpg" alt="Design Course">
-            <div class="course_text">
-              <h4>Marketing</h4>
-              <p>Course</p>
-              <p>Analytics, Content Marketing, Mobile Marketing</p>
+            <div class="course">
+              <img src="./resourses/images/course-marketing.jpg" alt="Design Course">
+              <div class="course_text">
+                <h4 role="heading">Marketing</h4>
+                <p>Course</p>
+                <p>Analytics, Content Marketing, Mobile Marketing</p>
+              </div>
             </div>
-          </div>
 
-          <!-- Second Content Mobile  -->
+            <!-- Second Content Mobile  -->
 
-          <div class="mobileCourse">
-            <span>Software engineering</span>
-            <span>Computer art</span>
-            <span>Design</span>
-            <span>Data</span>
-            <span>Business</span>
-            <span>Marketing</span>
-
-
-          </div>
-
-
-
-        </div>
-      </div>
-    </div>
-
-    <!-- Third Content Section -->
-
-    <div class="containerOnewhite">
-
-      <div class="theaderContainer">
-        <span class="lheader">Thesis Exhibit</span>
-        <h3 class="mheader">Thesis exhibit</h3>
-      <div
-
-      <div class="firstContent">
-
-        <div class="fisrtContainer">
-          <video src="./resourses/videos/thesis.mp4" controls></video>
-          <h2>Reimagine urban</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        </div>
-
-        <!-- Third Side Content  -->
-
-        <div class="thirdSidecontiner">
-
-          <div class="firstSide">
-            <img src="./resourses/images/thesis-fisma.jpg" alt="Orientation date">
-            <div class="firstSide_text">
-              <h3>Fisma: Design and prototype</h3>
-              <p>Designer showcase of new prototype product</p>
+            <div class="mobileCourse">
+              <span>Software engineering</span>
+              <span>Computer art</span>
+              <span>Design</span>
+              <span>Data</span>
+              <span>Business</span>
+              <span>Marketing</span>
             </div>
-          </div>
 
-          <div class="firstSide">
-            <img src="./resourses/images/thesis-now-and-then.jpg" alt="Orientation date">
-            <div class="firstSide_text">
-              <h3>Now and then</h3>
-              <p>Research study about New York</p>
-            </div>
           </div>
         </div>
       </div>
-    </div>
+
+      <!-- Third Content Section -->
+
+      <div class="containerOnewhite">
+
+        <div class="theaderContainer">
+          <span class="lheader" role="heading">Thesis exhibit</span>
+          <h3 class="mheader" role="heading">Thesis exhibit</h3>
+        <div
+
+        <div class="firstContent">
+
+          <div class="fisrtContainer">
+            <video src="./resourses/videos/thesis.mp4" controls></video>
+            <h2 role="heading">Reimagine urban</h2>
+            <p role="contentinfo">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+          </div>
+
+          <!-- Third Side Content  -->
+
+          <aside>
+
+            <div class="thirdSidecontiner">
+              <div class="firstSide">
+                <img src="./resourses/images/thesis-fisma.jpg" alt="Orientation date">
+                <div class="firstSide_text">
+                  <h3>Fisma: Design and prototype</h3>
+                  <p>Designer showcase of new prototype product</p>
+                </div>
+              </div>
+
+              <div class="firstSide">
+                <img src="./resourses/images/thesis-now-and-then.jpg" alt="Orientation date">
+                <div class="firstSide_text">
+                  <h3>Now and then</h3>
+                  <p>Research study about New York</p>
+                </div>
+              </div>
+            </div>
+
+          </aside>
+        </div>
+      </div>
+
+    </main>
 
     <!-- Footer Section  -->
 
     <footer>
+
       <div class="copyrightContainer">
         <p>© Colmar Academy. All rights reserved</p>
       </div>
+
       <div class="terms">
-        <ul>
+        <ul role="complementary">
           <li><a href="#">Terms</a></li>
           <li><a href="#">Privacy</a></li>
         </ul>
-
       </div>
 
-
-
     </footer>
-
-
-
 
 
   </body>
