Final Commit cleaned and refactored CSS where I can

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <ul role="presentation">
           <li><a href="#">On Camupus</a></li>
           <li><a href="#">Online</a></li>
+          <li><a href="#">For companies</a></li>
           <li><a href="#">Sign in</a></li>
         </ul>
 
